fix height issues on mobile

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -44,6 +44,7 @@ span.arrow-down {
     background-size: 2000px;
     background-repeat: no-repeat;
     width: 100%;
+    min-height: 100%;
 
     #pg2-menu {
       padding-top: 20px;
